RESOLVED FIXED144997
[GTK] Fix PlatformDisplayWayland construction error, implement the destructor
https://bugs.webkit.org/show_bug.cgi?id=144997
Summary [GTK] Fix PlatformDisplayWayland construction error, implement the destructor
Zan Dobersek
Reported 2015-05-14 04:19:20 PDT
[GTK] Fix PlatformDisplayWayland construction error, implement the destructor
Attachments
Patch (2.45 KB, patch)
2015-05-14 04:21 PDT, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2015-05-14 04:21:50 PDT
Zan Dobersek
Comment 2 2015-05-15 00:07:15 PDT
Comment on attachment 253117 [details] Patch Clearing flags on attachment: 253117 Committed r184374: <http://trac.webkit.org/changeset/184374>
Zan Dobersek
Comment 3 2015-05-15 00:07:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.