[GTK] Fix PlatformDisplayWayland construction error, implement the destructor https://bugs.webkit.org/show_bug.cgi?id=144997

Reviewed by Carlos Garcia Campos.

The PlatformDisplayWayland constructor is private, so we can't use
std::make_unique<>() to construct an object of this class.

Implement the PlatformDisplayWayland destructor, cleaning out all
the Wayland resources, if present.

* platform/graphics/wayland/PlatformDisplayWayland.cpp:
(WebCore::PlatformDisplayWayland::create):
(WebCore::PlatformDisplayWayland::PlatformDisplayWayland):
(WebCore::PlatformDisplayWayland::~PlatformDisplayWayland):


Canonical link: https://commits.webkit.org/163074@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184374 268f45cc-cd09-0410-ab3c-d52691b4dbfc